Set font-display to swap to ensure is visible while font is loading

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,5 @@
 @font-face {
+  font-display: swap;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -6,6 +7,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -13,6 +15,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: Hanson;
   font-style: normal;
   font-weight: bold;
@@ -20,6 +23,7 @@
 }
 
 html {
+  font-display: swap;
   font-family: Roboto, sans-serif;
   font-size: 16px;
   font-style: normal;
